kustomize/arr-stack/lingarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingarr
spec:
  selector:
    app: lingarr
  type: ClusterIP
  ports:
    - port: 9876
      targetPort: lingarr
