kustomize/arr-stack/lingarr/lingarr-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lingarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lingarr-k8s.vinicima.com`) || Host(`lingarr.vinicima.com`)
      kind: Rule
      services:
        - name: lingarr
          port: 9876
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
